tests/ui/derive/fail_default_missing_ts_optional.rs
use serde::{Deserialize, Serialize};

#[derive(Deserialize, Serialize, ts_rs::TS, foundry::ApiSchema)]
struct DefaultedRequest {
    #[serde(default)]
    page: u64,
}

fn main() {}
